<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp">

    <TextView
        android:id="@+id/instructions_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask_question_instructions"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/instructions_textview">
        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_label"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/question_textinputlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textinputlayout">
        <EditText
            android:id="@+id/question_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:hint="@string/question_label"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/unpublish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/question_textinputlayout"
        android:layout_toStartOf="@+id/publish_button"
        android:text="@string/unpublish_button"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:id="@+id/publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/question_textinputlayout"
        android:text="@string/publish_button"
        style="?android:attr/borderlessButtonStyle"/>
</RelativeLayout>