<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_vertical"
              android:padding="16dp">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/raw_distance_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/calculated_distance_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/accuracy_question_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accuracy_question"
        android:textSize="18sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/very_accurate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/very_accurate"
        android:visibility="gone"/>

    <Button
        android:id="@+id/somewhat_accurate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/somewhat_accurate"
        android:visibility="gone"/>

    <Button
        android:id="@+id/somewhat_inaccurate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/somewhat_inaccurate"
        android:visibility="gone"/>

    <Button
        android:id="@+id/very_inaccurate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/very_inaccurate"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/accuracy_results_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:visibility="gone"/>

</LinearLayout>